# tanstack-react

./: .gitignore  cpu.docker-compose.yml  db.Dockerfile  docker-compose.yml  nginx.Dockerfile  nginx.conf  notes.txt
api/: Dockerfile  alembic.ini  pyproject.toml
api/app/: __init__.py  basemodel.py  settings.py
api/app/api/: main.py
api/app/api/collections/: schema.py  use_cases.py  views.py
api/app/api/documents/: schema.py  use_cases.py  views.py
api/app/config/: local.env
api/app/models/: __init__.py  collections.py  document.py  documents.py  schema.py
api/dev_notebooks/: convo_1.txt  dx_script.txt  text1.txt  texta.txt
api/migrations/: env.py
app-api/: Dockerfile  pyproject.toml
app-api/app/: __init__.py
app-api/dev_notebooks/: sentencexformer.ipynb  textb.txt
app-client/: Dockerfile  package.json
app-client/src/: routeTree.gen.ts
app-client/src/routes/: __root.tsx  index.lazy.tsx  stuff.lazy.tsx
app-r-api/: .gitignore  Dockerfile
app-r-api/R/: rest.R
client/: Dockerfile  package.json  vite.config.ts
client/src/: globals.css  main.tsx  routeTree.gen.ts
client/src/components/: uploadform.tsx
client/src/components/features/generic/: queries.tsx
client/src/components/functions/: upload.tsx
client/src/components/layouts/: layout.tsx
client/src/lib/: api-client.ts
client/src/routes/: __root.tsx  about.lazy.tsx  form.lazy.tsx  index.lazy.tsx  stuff.lazy.tsx  test.lazy.tsx
gpu/: Dockerfile  pyproject.toml  tasks.py
r/R/: functions.R  main.R
