[tool.poetry]
name = "app-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
granian = { version = "^1.4.1", extras = ["reload"] }
SQLAlchemy = "^2.0.30"
psycopg = {extras = ["binary"], version = "^3.1.19"}
notebook = "^7.2.0"
sentence-transformers = "^3.0.0"
pgvector = "^0.2.5"
celery = "^5.3.4"
redis = { version = "^4.6.0", extras = ["hiredis"] }
gevent = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
