[tool.poetry]
name = "app-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { version = "^0.22.0", extras = ["standard"] }

granian = { version = "^1.4.1", extras = ["reload"] }
polars = "^0.20.31"
pyarrow = "^16.1.0"
pandas = "^2.2.2"
networkx = "^3.3"
SQLAlchemy = "^2.0.30"
psycopg = "^3.1.19"
scikit-learn = "^1.5.0"
librosa = "^0.10.2.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
