[tool.poetry]
name = "gpu"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
granian = { version = "^1.4.1", extras = ["reload"] }
SQLAlchemy = "^2.0.30"
psycopg = {extras = ["binary"], version = "^3.1.19"}
notebook = "^7.2.0"
sentence-transformers = "^3.0.0"
pgvector = "^0.2.5"
wtpsplit = "^1.3.0"
xgboost = "^2.0.3"
scikit-learn = "^1.5.0"
torch = {version = "^2.3.1+cu121", source = "pytorch"}
torchvision = {version = "^0.18.0+cu121", source = "pytorch"}
torchaudio = {version = "^2.3.01", source = "pytorch"}
torch_geometric = { version = "^2.5.3", extras = ["graphgym"] }
torch_scatter = {version = "^2.1.2", source = "torch_geo_opt"}
torch_sparse = {version = "^0.6.18", source = "torch_geo_opt"}
torch_cluster = {version = "^1.6.3", source = "torch_geo_opt"}
torch_spline_conv = {version = "1.2.2", source = "torch_geo_opt"}
matplotlib = "^3.9.0"
openpyxl = "^3.1.3"
ogb = "^1.3.6"
tensorboardx = "^2.6.2.2"
celery = "^5.4.0"
redis = { version = "^5.0.5", extras = ["hiredis"] }
gevent = "^24.2.1"

[tool.poetry.group.linux_only]
optional = true

[tool.poetry.group.linux_only.dependencies]
pyg-lib = {version = "^0.4.0", source = "torch_geo_opt"}


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[[tool.poetry.source]]
name = "torch_geo_opt"
url = "https://data.pyg.org/whl/torch-2.3.0+cu121.html"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
